[package]
name = "serenity_ctrlc"
version = "0.1.0"
authors = ["Yehuthith <yehuthith@gmail.com>"]
edition = "2021"
description = "Ctrl+C handler for serenity."
keywords = ["discord", "serenity", "sigkill", "ctrlc", "sigint"]
categories = ["asynchronous"]
license = "MIT OR Apache-2.0"

[dependencies]
ctrlc = "3.2.1"
serenity = { version = "0.10.10", default-features = false, features = ["rustls_backend", "gateway", "client", "model"] }
tokio = "1"

[[example]]
name = "example"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
